--- a/css/simpleStore.css
+++ b/css/simpleStore.css
@@ -23,8 +23,8 @@ a.hover {
 
 #nav-bar{
     display: grid;
-    justify-content: space-between;
     grid-template-columns: repeat(2, 1fr);
+    align-items: center;
 }
 
 .brand {
@@ -32,6 +32,7 @@ a.hover {
     float: left;
     text-decoration: none;
     color: #000;
+    padding: 1.5rem;
 }
 
 .brand:hover {
@@ -39,15 +40,15 @@ a.hover {
 }
 
 .brand img {
-	max-height: 160px;
+	max-height: 75px;
 }
 
-.button.button-primary.u-pull-right.simpleStore_viewCart{
-    justify-self: flex-end;
-    align-self: center;
-    width: fit-content;
+/* intro */
+.intro{
+    display: block;
+    height: 500px;
+    background-color: #040404;
 }
-
 /* simpleCart */
 
 .simpleCart_shelfItem {
@@ -74,7 +75,7 @@ a.hover {
     text-decoration: none;
 }
 
-.simpleCart_shelfItem label {
+.simpleCart_shelfItem label, .simpleStore_shippingLocation label {
     display: block;
     float: left;
     line-height: 40px;
@@ -92,30 +93,9 @@ a.hover {
     justify-content: flex-end;
 }
 
-.zoom {
-    display:inline-block;
-    position: relative;
+#item_thumb_zoom:hover{
+    cursor: pointer;
 }
-
-/* magnifying glass icon */
-.zoom:after {
-    content:'';
-    display:block;
-    width:33px;
-    height:33px;
-    position:absolute;
-    top:0;
-    right:0;
-    background:url(/icon.png);
-}
-
-.zoom img {
-    display: block;
-}
-
-.zoom img::selection { background-color: transparent; }
-
-
 
 .item_Quantity {
     display: inline-block;
@@ -138,6 +118,7 @@ a.hover {
     display: flex;
     align-items: center;
 }
+
 
 .headerRow {
     display: table-row;
@@ -195,12 +176,12 @@ a.hover {
 }
 
 /* Views */
-
 .simpleStore_getDetail_container {
     display: flex;
     align-items: stretch;
+    justify-content: space-between;
     float: left;
-    width: 50%;
+    width: 100%;
     padding: 5px 0px;
 }
 
@@ -361,7 +342,11 @@ p.notify_text {
 	margin-bottom: 0rem;
 }
 
-@media (max-width: 920px) {
+@media (max-width: 920px){
+    .brand img {
+        max-height: 60px;
+    }
+
     .simpleStore_getDetail_container {
         width: 100%;
     }
