--- a/css/simpleStore.css
+++ b/css/simpleStore.css
@@ -1,30 +1,64 @@
-/*
-* simplestore
-* Copyright 2015 Chris Diana
-* https://github.com/cdmedia/simplestore
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-*/
-select {
-    display: block;
-    float: left;
-    margin-right: 50px;
-}
-
-a.hover {
-    text-decoration: none;
-}
-
 /* Main Layout */
+* {
+    box-sizing: border-box;
+}
+
+:root {
+    --yellow: #fae741;
+    --dark: #040404;
+    --light: #ffffff;
+}
 
 .simpleStore {
     margin-top: 20px;
 }
 
-#nav-bar{
+/* Navigation */
+/* Don't show on desktop */
+#x, #togglemenu{
+    display: none;
+}
+
+#nav-container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
+}
+
+/* Navigation */
+#nav-bar{
+    display: flex;
+    justify-content: flex-end;
+    padding: 0;
+    margin: 0;
+}
+
+nav{
+    display: inline-flex;
+    position: static;
+    background-color: white;
+    padding: 0;
+    margin: 0;
+}
+
+nav button{
+    padding: 1.5em 0;
+    margin: 0;
+}
+
+.breadcrumb-item{
+    color: var(--dark);
+    font-size: 1.5em;
+    margin-right: 1em;
+}
+
+nav a:hover{
+    color: var(--yellow);
+}
+
+/* Account button */
+nav a:active{
+    color: var(--yellow);
 }
 
 .brand {
@@ -46,11 +80,21 @@ a.hover {
 .banner{
     display: flex;
     justify-content: center;
-    margin: 1.5em;
+    margin: 5em;
     color: red;
 }
-/* simpleCart */
 
+select {
+    display: block;
+    float: left;
+    margin-right: 50px;
+}
+
+a {
+    text-decoration: none;
+}
+
+/* simpleCart */
 .simpleCart_shelfItem {
     border: 1px solid #EFEFEF;
     padding: 25px 18px 10px 18px;
@@ -91,6 +135,7 @@ a.hover {
 
 #details-btn{
     justify-content: flex-end;
+    font-size: 11px;
 }
 
 #item_thumb_zoom:hover{
@@ -187,10 +232,22 @@ a.hover {
     font-size: 20px;
 }
 
+#checkout-btn {
+    width: fit-content;
+    justify-self: flex-end;
+    color: #FFF;
+    background-color: #040404;
+    font-size: 11px;
+}
+
+#checkout-btn:hover{
+    color: var(--yellow);
+}
+
 /* Views */
 .simpleStore_getDetail_container {
     display: flex;
-    align-items: stretch;
+    align-items: center;
     justify-content: space-between;
     float: left;
     width: 100%;
@@ -210,7 +267,7 @@ a.hover {
 .simpleStore_detailView .item_add {
     margin: 0px;
     margin-bottom: 0px;
-    margin-top: 19em;
+    margin-top: 12em;
 }
 
 .simpleStore_detailView .item_name {
@@ -359,26 +416,177 @@ p.notify_text {
 	margin-bottom: 0rem;
 }
 
+/* Footer */
+footer {
+    display: flex;
+    justify-content: space-between;
+    opacity: 0.9;
+    margin-top: 5em;
+}
+
+footer a {
+    color: var(--dark);
+}
+
+footer a:hover{
+    color: var(--yellow);
+}
+
+footer ul{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    font-size: 1.5em;
+    font-weight: 400;
+}
+
+.fa-facebook-f, .fa-pinterest, .fa-instagram{
+    display: block;
+    padding: 0 0 0 1em;
+}
+
+#vertical-line{
+    padding: 0 1em 0 1em;
+}
+
 @media (max-width: 920px){
+
+    h1{
+        font-size: 1.2em;
+    }
+
     .brand img {
-        max-height: 60px;
+        max-height: 40px;
+    }
+
+    #nav-bar {
+        display: flex;
+        flex-flow: column;
+        align-items: flex-end;
+    }
+
+    /*Burger menu - Menu On*/
+    #menuon{
+        background: black;
+        color: white;
+        padding: 1em 1.5em 0 0;
+        position: fixed;
+        z-index: 102;
+        opacity: 0;
+    }
+
+    /*Burger menu - Menu Off*/
+    .off{
+        display: none;
+        position: fixed;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0,0,0,0.60);
+        z-index: 99;
+    }
+
+    .nav-span{
+        display: block;
+        width: 1.6em;
+        height: 2px;
+        background: black;
+        margin-bottom: 4px;
+        z-index: 101;
+    }
+
+    /* Close button (X) for burger menu*/
+    #x{
+        padding: 0.2em;
+        font-size: 2em;
+        font-style: normal;
+        position: fixed;
+        top: 1%;
+        right: 4%;
+        z-index: 102;
+        display: none;
+        opacity: 0.9;
+    }
+
+    /*Navigation bar*/
+    nav {
+        background: white;
+        position: fixed;
+        top: 2%;
+        right: 4%;
+        padding: 2em;
+        z-index: 100;
+        display: none;
+    }
+
+    /*Links in Navbar*/
+    nav a{
+        color: var(--dark);
+        display: block;
+        padding-bottom: 2em;
+        min-width: 10em;
+        text-decoration: none;
+        text-align: center;
+        font-size: 1.6em;
+    }
+
+    /*to toggle the burger menu*/
+    #togglemenu:checked ~ nav{
+        display: block;
+    }
+
+    /*gray space to turn off burger menu*/
+    #togglemenu:checked ~ #menu-off{
+        display: block;
+    }
+
+    /* X to turn off burger menu*/
+    #togglemenu:checked ~ #x{
+        display: block;
+    }
+
+    #togglemenu:checked ~ .nav-span{
+        display: none;
+    }
+
+    .breadcrumb-item{
+        margin: 0;
+    }
+
+    .banner{
+        margin: 3em 2em 0 0;
     }
 
     .simpleStore_getDetail_container {
         width: 100%;
     }
+
     .simpleCart_shelfItem {
         position: relative;
     }
+
     .simpleCart_shelfItem .item_name {
         font-size: 1.8rem;
     }
+
     .simpleStore_getDetail {
         position: inherit;
         display: block;
-        width: 100%;
         margin: 0px;
         margin-bottom: 0px;
+    }
+
+    footer{
+        display: block;
+    }
+
+    footer ul{
+        font-size: 1em;
+    }
+
+    footer i{
+        font-size: 1.5em;
     }
 }
 
@@ -389,12 +597,15 @@ p.notify_text {
         display: block;
         width: 100%;
         height: auto;
+        padding-top: 1em;
     }
 
     .simpleStore_detailView .item_add {
         position: inherit;
         display: block;
         width: 100%;
+        margin-top: 4em;
+        margin-bottom: 4em;
     }
 
     .cart_info {
