--- a/css/simpleStore.css
+++ b/css/simpleStore.css
@@ -9,11 +9,16 @@
     --light: #ffffff;
 }
 
+h1{
+    font-weight: 700;
+}
+
 .simpleStore {
     margin-top: 20px;
 }
 
 /* Navigation */
+
 /* Don't show on desktop */
 #x, #togglemenu{
     display: none;
@@ -81,8 +86,10 @@ nav a:active{
 .banner{
     display: flex;
     justify-content: center;
-    margin: 5em;
     color: red;
+    text-transform: uppercase;
+    font-size: 3vw;
+    padding: 3vw;
 }
 
 select {
@@ -107,7 +114,6 @@ a {
 
 .company-name{
     font-size: 12em;
-    font-weight: bold;
     color: var(--yellow);
     text-transform: uppercase;
     position: absolute;
@@ -175,7 +181,6 @@ a {
 .section2-title{
     font-size: 5vw;
     text-transform: uppercase;
-    font-weight: 700;
 }
 
 /* simpleCart */
@@ -498,6 +503,73 @@ p.error_text {
 }
 p.notify_text {
 	margin-bottom: 0rem;
+}
+
+/* About page */
+.about-title{
+    display: flex;
+    justify-content: center;
+    font-size: 6em;
+    margin: 0.5em 0 1em 0;
+}
+
+.about-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 500px;
+}
+
+#about-bottom-section{
+    height: 600px;
+}
+
+.about-txt-container{
+    width: 180vw;
+    padding: 0 8em 0 0;
+}
+
+.about-txt-container h4{
+    letter-spacing: initial;
+    font-size: 1.2vw;
+    font-weight: 400;
+}
+
+#about-txt-bottom-right{
+    padding: 0 0 0 8em;
+}
+
+.about-img-container{
+    position: relative;
+}
+
+.about-img-container img{
+    max-width: 55%;
+}
+
+#img-about-upper-right-one{
+    position: absolute;
+    right: 0vw;
+    bottom: 4vw;
+}
+
+#img-about-upper-right-two{
+    position: relative;
+    left: 0vw;
+    top: 0vw;
+}
+
+#img-about-bottom-left-one{
+    position: absolute;
+    max-width: 58%;
+    right: 0vw;
+    bottom: 0vw;
+}
+
+#img-about-bottom-left-two{
+    position: relative;
+    left: 0vw;
+    top: 4vw;
 }
 
 /* Footer */
