--- a/css/simpleStore.css
+++ b/css/simpleStore.css
@@ -19,7 +19,6 @@ h1{
 
 /* Navigation */
 
-/* Don't show on desktop */
 #x, #togglemenu{
     display: none;
 }
@@ -30,7 +29,6 @@ h1{
     align-items: center;
 }
 
-/* Navigation */
 #nav-bar{
     display: flex;
     justify-content: flex-end;
@@ -88,7 +86,7 @@ nav a:active{
     justify-content: center;
     color: red;
     text-transform: uppercase;
-    font-size: 3vw;
+    font-size: 2vw;
     padding: 3vw;
 }
 
@@ -102,11 +100,8 @@ a {
     text-decoration: none;
     color: black;
 }
-/* Intro template */
-.intro_container{
 
-}
-
+/* Home page */
 .section1{
     position: relative;
     margin: 3em 0 0 0;
@@ -170,20 +165,19 @@ a {
     z-index: 22;
 }
 
-.section2{
-
-}
-
-.see-more{
-
-}
-
 .section2-title{
     font-size: 5vw;
     text-transform: uppercase;
 }
+/* End of Home page style */
 
-/* simpleCart */
+/* T-shirts */
+.t-shirts-title{
+    display: flex;
+    justify-content: center;
+    font-size: 6em;
+    margin: 0.5em 0 1em 0;
+}
 .simpleCart_shelfItem {
     border: 1px solid #EFEFEF;
     padding: 25px 18px 10px 18px;
@@ -261,7 +255,6 @@ a {
     align-items: center;
 }
 
-
 .headerRow {
     display: table-row;
     font-weight: 700;
@@ -294,9 +287,241 @@ a {
 .itemRow .item-quantity {
     text-align: center;
 }
+/* End of t-shirts page style  */
+
+/* Prints page */
+.prints-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.prints-title{
+    display: flex;
+    justify-content: center;
+    font-size: 6em;
+    margin: 0.5em 0 1em 0;
+}
+
+.landscape-image{
+    width: 100%;
+}
+
+.portrait-image{
+    height: 100%;
+}
+
+.section-container{
+    width: 20em;
+    height: 28em;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    margin: 2em 2em;
+}
+
+.article-container{
+    width: 17em;
+    height: 25em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.price{
+    position: absolute;
+    left: 1.5em;
+    bottom: -0.5em;
+    margin: 0;
+    background: var(--dark);
+    color: var(--yellow);
+    padding: 0.5em;
+    border-radius: 10em;
+}
+
+.title{
+    position: absolute;
+    left: 1.5em;
+    bottom: 2em;
+    margin: 0;
+    color: black;
+}
+
+.artist{
+    position: absolute;
+    font-style: italic;
+    right: 1.5em;
+    bottom: 2em;
+    margin: 0;
+}
+
+.print-popup-info{
+    background: white;
+    display: none;
+    z-index: 999;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+}
+
+.close-button{
+    text-decoration: underline;
+    text-decoration-color: var(--yellow);
+    z-index: 1000;
+    font-size: 2em;
+    cursor: pointer;
+    font-weight: 600;
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+}
+.print-info-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.print-description{
+    display: flex;
+    flex-direction: column;
+    margin: 10em 10em 10em 2em;
+    justify-content: space-between;
+}
+
+.cart-buyNow-btn{
+    padding: 0.5em 1em;
+    background: var(--dark);
+    color: var(--yellow);
+}
+
+.artist-info{
+    display: flex;
+    align-items: center;
+}
+
+.no-bottom-margin{
+    margin-bottom: 0;
+}
+
+.no-top-margin{
+    margin-top: 0;
+}
+
+#print-info-img-margin{
+    margin: 2em 5em 2em 2em;
+}
+
+#see-more-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#see{
+    color: var(--dark);
+    margin-bottom: 0;
+    font-weight: 600;
+}
+
+#t-shirts{
+    font-size: 2em;
+    color: var(--dark);
+    text-decoration: underline;
+    text-decoration-color: var(--yellow);
+    margin-top: 0;
+    font-weight: 600;
+}
+
+#banner{
+    background-color: var(--yellow);
+    height: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#banner-text{
+    font-size: 1em;
+    color: var(--dark);
+}
+/* End of prints page style  */
+
+/* About page */
+.about-title{
+    display: flex;
+    justify-content: center;
+    font-size: 6em;
+    margin: 0.5em 0 1em 0;
+}
+
+.about-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 500px;
+}
+
+#about-bottom-section{
+    margin: 0 0 10em 0;
+}
+
+.about-txt-container{
+    width: 180vw;
+    padding: 0 8em 0 0;
+}
+
+.about-txt-container h4{
+    letter-spacing: initial;
+    font-size: 1.2vw;
+    font-weight: 400;
+}
+
+#about-txt-bottom-right{
+    padding: 0 0 0 11em;
+}
+
+.about-img-container{
+    position: relative;
+}
+
+.about-img-container img{
+    max-width: 55%;
+}
+
+#img-about-upper-right-one{
+    position: absolute;
+    right: 0vw;
+    bottom: 4vw;
+}
+
+#img-about-upper-right-two{
+    position: relative;
+    left: 0vw;
+    top: 0vw;
+}
+
+#img-about-bottom-left-one{
+    position: absolute;
+    max-width: 58%;
+    right: 0vw;
+    bottom: 0vw;
+}
+
+#img-about-bottom-left-two{
+    position: relative;
+    left: 0vw;
+    top: 4vw;
+}
+/* End of about page style */
 
 /* Cart */
-
 #shippingCountry {
     margin-left: 20px;
 }
@@ -332,6 +557,7 @@ a {
 #checkout-btn:hover{
     color: var(--yellow);
 }
+/* End of cart style */
 
 /* Views */
 .simpleStore_getDetail_container {
@@ -351,6 +577,7 @@ a {
 
 .simpleStore_detailView.simpleCart_shelfItem {
     padding: 26px 18px 8px 18px;
+    margin: 2em 0 10em 0;
 }
 
 .simpleStore_detailView .item_add {
@@ -407,7 +634,7 @@ a.simpleCart_empty:hover {
 .simpleCart_checkout {
     margin: 12px 0px 0px 0px;
 }
-
+/* End of the views */
 
 /* Utility */
 
@@ -504,73 +731,7 @@ p.error_text {
 p.notify_text {
 	margin-bottom: 0rem;
 }
-
-/* About page */
-.about-title{
-    display: flex;
-    justify-content: center;
-    font-size: 6em;
-    margin: 0.5em 0 1em 0;
-}
-
-.about-section{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 500px;
-}
-
-#about-bottom-section{
-    height: 600px;
-}
-
-.about-txt-container{
-    width: 180vw;
-    padding: 0 8em 0 0;
-}
-
-.about-txt-container h4{
-    letter-spacing: initial;
-    font-size: 1.2vw;
-    font-weight: 400;
-}
-
-#about-txt-bottom-right{
-    padding: 0 0 0 8em;
-}
-
-.about-img-container{
-    position: relative;
-}
-
-.about-img-container img{
-    max-width: 55%;
-}
-
-#img-about-upper-right-one{
-    position: absolute;
-    right: 0vw;
-    bottom: 4vw;
-}
-
-#img-about-upper-right-two{
-    position: relative;
-    left: 0vw;
-    top: 0vw;
-}
-
-#img-about-bottom-left-one{
-    position: absolute;
-    max-width: 58%;
-    right: 0vw;
-    bottom: 0vw;
-}
-
-#img-about-bottom-left-two{
-    position: relative;
-    left: 0vw;
-    top: 4vw;
-}
+/* End of utility style */
 
 /* Footer */
 footer {
@@ -604,7 +765,10 @@ footer ul{
 #vertical-line{
     padding: 0 1em 0 1em;
 }
+/* End of footer style */
 
+
+/* Media queries */
 @media (max-width: 920px){
 
     h1{
@@ -670,8 +834,9 @@ footer ul{
         background: white;
         position: fixed;
         top: 2%;
+        left: 4%;
         right: 4%;
-        padding: 2em;
+        padding: 4em;
         z-index: 100;
         display: none;
     }
@@ -707,11 +872,12 @@ footer ul{
     }
 
     .breadcrumb-item{
-        margin: 0;
+        margin: 15px 0;
     }
 
     .banner{
-        margin: 3em 2em 0 0;
+        font-size: 1em;
+        margin: 0;
     }
 
     .simpleStore_getDetail_container {
@@ -720,6 +886,10 @@ footer ul{
 
     .simpleCart_shelfItem {
         position: relative;
+    }
+
+    .simpleStore_detailView.simpleCart_shelfItem{
+        margin: 0;
     }
 
     .simpleCart_shelfItem .item_name {
@@ -733,8 +903,35 @@ footer ul{
         margin-bottom: 0px;
     }
 
+    .about-section{
+        flex-flow: column;
+    }
+
+    #about-bottom-section {
+        flex-flow:column-reverse;
+        margin: 0;
+    }
+
+    .about-txt-container {
+        width: 100%;
+        padding: 0.5em;
+    }
+
+    #about-txt-bottom-right {
+        padding: 0.5em;
+    }
+
+    .about-txt-container h4 {
+        font-size: 1em;
+    }
+
+    .about-title, .prints-title, .t-shirts-title{
+        font-size: 2em;
+    }
+
     footer{
         display: block;
+        margin: 3em 0 0 0;
     }
 
     footer ul{
@@ -747,6 +944,10 @@ footer ul{
 }
 
 @media (max-width: 620px) {
+
+    #banner-text{
+        font-size: 0.8em;
+    }
 
    .simpleStore_detailView .item_thumb {
         margin-bottom: 10px;
